--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,4 +4,6 @@
 
 @import 'mixins';
 
-@import '../components/Button/style'
+@import '../components/Button/style';
+
+@import '../components/Menu/style';
